k8s/local-path-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local-path-storage

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: local-path-provisioner
  namespace: local-path-storage
spec:
  selector:
    matchLabels:
      app: local-path-provisioner
  template:
    metadata:
      labels:
        app: local-path-provisioner
    spec:
      serviceAccountName: local-path-provisioner-service-account
      containers:
        - name: local-path-provisioner
          image: rancher/local-path-provisioner:v0.0.31
          imagePullPolicy: IfNotPresent
          command:
            - local-path-provisioner
            - --debug
            - start
            - --config
            - /etc/config/config.json
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config/
            - name: local-path
              mountPath: /opt/local-path-provisioner
      volumes:
        - name: config-volume
          configMap:
            name: local-path-config
        - name: local-path
          hostPath:
            path: /opt/local-path-provisioner
            type: DirectoryOrCreate
