k8s/kafa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: docker.io/bitnami/kafka:4.0.0
          ports:
            - containerPort: 9092
            - containerPort: 9093
          resources:
            limits:
              memory: "2Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  clusterIP: None  # 关键修改点3：使用Headless Service
  ports:
    - port: 9092
      name: client
    - port: 9093
      name: controller
  selector:
    app: kafka
